refact: Simplify exception assertions and enhance null checks in service methods for improved clarity and reliability